force-app/main/default/objects/slackv2__Subscription_Condition__c/slackv2__Subscription_Condition__c.object-meta.xml
<CustomObject>
    <label>Subscription Condition</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Subscription Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>