force-app/main/default/objects/slackv2__Subscription_Condition__c/fields/slackv2__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>