force-app/main/default/objects/slackv2__Subscription_Condition__c/fields/slackv2__Operator__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>