force-app/main/default/objects/slackv2__Subscription_Condition__c/fields/slackv2__Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Subscription_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Type</label>
    <referenceTo>slackv2__Subscription_Type__c</referenceTo>
    <relationshipName>Subscription_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>